# ai-resume-recommendation-engine

./: README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: job_api.py  resume_api.py
backend/app/core/: database.py  logger.py  settings.py
backend/app/data/: job_data.csv  resume_data.csv
backend/app/models/: job.py  resume.py  user.py
backend/app/schemas/: job_schema.py  resume_schema.py  user_schema.py
backend/app/services/: job_service.py  resume_service.py  user_service.py
frontend/: package-lock.json
volume/cache/: machine.json
